# IRT

./: Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
